# wsgi-basic

./: AUTHORS  ChangeLog  README.md  create_project.sh  requirements.txt  setup.cfg
config-generator/: wsgi-basic.conf
etc/: init_db.sql  test.ini  wsgi-basic-paste.ini  wsgi-basic.conf  wsgi-basic.conf.sample
wsgi_basic/: config.py  controllers.py  exception.py  routers.py  service.py
wsgi_basic/cmd/: all.py
wsgi_basic/common/: authorization.py  config.py  controller.py  dependency.py  manager.py  utils.py  wsgi.py
wsgi_basic/common/environment/: __init__.py  eventlet_server.py
wsgi_basic/db/: mysql.py
wsgi_basic/middleware/: __init__.py  core.py
wsgi_basic/policy/: __init__.py  core.py
wsgi_basic/policy/backends/: sql.py
wsgi_basic/server/: backends.py  common.py  eventlet.py
wsgi_basic/tests/: base.py  config.py  main.py  utils.py
wsgi_basic/tests/api/v1/token/: test_single_api.py
wsgi_basic/tests/api/v1/user/: test_single_api.py
wsgi_basic/token/: __init__.py  controllers.py  routers.py
wsgi_basic/token/persistence/: __init__.py  core.py
wsgi_basic/token/persistence/backends/: sql.py
wsgi_basic/token/providers/: __init__.py  core.py
wsgi_basic/token/providers/backends/: uuid.py
wsgi_basic/user/: __init__.py  controllers.py  core.py  routers.py
